airflow_docker/logs/dag_id=sql_hook_to_s3/run_id=scheduled__2023-11-08T04:00:00+00:00/task_id=load_data_from_pg_to_s3/attempt=3.log
[2023-11-08T14:35:55.313+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T04:00:00+00:00 [queued]>
[2023-11-08T14:35:55.370+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T04:00:00+00:00 [queued]>
[2023-11-08T14:35:55.371+0000] {taskinstance.py:1361} INFO - Starting attempt 3 of 6
[2023-11-08T14:35:55.450+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): load_data_from_pg_to_s3> on 2023-11-08 04:00:00+00:00
[2023-11-08T14:35:55.463+0000] {standard_task_runner.py:57} INFO - Started process 666 to run task
[2023-11-08T14:35:55.479+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'sql_hook_to_s3', 'load_data_from_pg_to_s3', 'scheduled__2023-11-08T04:00:00+00:00', '--job-id', '115', '--raw', '--subdir', 'DAGS_FOLDER/sql_hook_to_s3_dag.py', '--cfg-path', '/tmp/tmpjuw14gjs']
[2023-11-08T14:35:55.494+0000] {standard_task_runner.py:85} INFO - Job 115: Subtask load_data_from_pg_to_s3
[2023-11-08T14:35:55.711+0000] {task_command.py:416} INFO - Running <TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T04:00:00+00:00 [running]> on host 5cb9101badf1
[2023-11-08T14:35:56.136+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='safarnejad.ho@gmail.com' AIRFLOW_CTX_DAG_OWNER='safarnejad' AIRFLOW_CTX_DAG_ID='sql_hook_to_s3' AIRFLOW_CTX_TASK_ID='load_data_from_pg_to_s3' AIRFLOW_CTX_EXECUTION_DATE='2023-11-08T04:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-11-08T04:00:00+00:00'
[2023-11-08T14:35:56.226+0000] {base.py:73} INFO - Using connection ID 'orders-pg-conn' for task execution.
[2023-11-08T14:35:56.284+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/sql_hook_to_s3_dag.py", line 25, in load_data_to_file
    cursor.execute('SELECT * FROM order WHERE date <= 20220501')
psycopg2.errors.SyntaxError: syntax error at or near "order"
LINE 1: SELECT * FROM order WHERE date <= 20220501
                      ^

[2023-11-08T14:35:56.372+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=sql_hook_to_s3, task_id=load_data_from_pg_to_s3, execution_date=20231108T040000, start_date=20231108T143555, end_date=20231108T143556
[2023-11-08T14:35:56.449+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 115 for task load_data_from_pg_to_s3 (syntax error at or near "order"
LINE 1: SELECT * FROM order WHERE date <= 20220501
                      ^
; 666)
[2023-11-08T14:35:56.492+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-08T14:35:56.613+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
